k8s/category-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: category-api
    version: v1
  name: category-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category-api
  template:
    metadata:
      labels:
        app: category-api
        version: v1
    spec:
      containers:
      - image: category-api
        name: category-api
        livenessProbe:
          httpGet:
            path: /
            port: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: category-api
    version: v1
  name: category-api-img-not-found
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category-api
  template:
    metadata:
      labels:
        app: category-api
        version: v1
    spec:
      containers:
      - image: category-api:v1-img-np
        name: category-api
        livenessProbe:
          httpGet:
            path: /
            port: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
