k8s/category-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: category-api-service
  name: category-api-service
spec:
  ports:
  - name: category-api
    port: 5000
    protocol: TCP
    targetPort: 5000
    nodePort: 30091
  selector:
    app: category-api
  type: NodePort
