k8s/category-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: category-ingress-service
spec:
  rules:
  - host: category-api-service
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: category-api-service
            port:
              number: 5000
